dockerize (#53)
